indico/modules/events/timetable/client/js/Toolbar.module.scss
// This file is part of Indico.
// Copyright (C) 2002 - 2026 CERN
//
// Indico is free software; you can redistribute it and/or
// modify it under the terms of the MIT License; see the
// LICENSE file for more details.

@use 'base/palette' as *;

// Separate variables to allow customization.
$primary-color: $dark-blue;
$bg-color: $white;
$toolbar-bg-color: $raincloud-gray;

.toolbar {
  display: flex;
  flex-direction: column;
  gap: 5px;
  position: sticky;
  top: 0;
  background-color: $bg-color;
  z-index: 100;
  border-bottom: 2px solid rgba($raincloud-gray, 0.8);
  padding: 15px 10px 0 10px;
   // Makes sure there is spacing when there is no timetable bar (e.g. single day)
  min-height: 64px;

  > .actions-bar {
    margin: 0 5px;

    > .right {
      margin-left: auto;
    }
  }

  .actions-bar,
  .timetable-bar {
    display: flex;
    align-items: center;

    &.timetable-bar {
      height: 3.8rem;
      overflow-y: hidden;

      &.block {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        align-items: center;
        gap: 0.2rem;
        padding: 0 10px;

        > :is(.header, .session) {
          margin: 0;
          max-width: min(800px, 100%);
        }

        > .header {
          overflow: hidden;
          text-overflow: ellipsis;
          letter-spacing: 0.05rem;
          font-size: 1rem;
          white-space: nowrap;
        }

        > .session {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          font-size: 0.7rem;
          letter-spacing: 0.05rem;
          padding: 4px 8px;
          border-radius: 100vh;
        }
      }

      .days-wrapper {
        flex-shrink: 1;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
        overflow-y: hidden;
        box-sizing: content-box;
        position: relative;

        .days {
          display: flex;
          overflow-x: auto;
          box-sizing: content-box;
          // This padding in combination with fixed height
          // and overflow-y hidden above,it hides the scrollbar
          padding: 18px 0;

          .day {
            cursor: pointer;
            display: flex;
            flex-direction: column;
            align-items: center;
            align-content: center;
            justify-content: center;
            border: 0;
            font-weight: normal;
            margin-bottom: 0;
            background: none;
            padding: 0;

            // Instead of gap we use this as the gradients also trigger a gap
            &:not(:last-of-type) {
              margin-right: 15px;
            }

            &.active {
              .day-badge {
                > .day-number {
                  color: $bg-color;
                  background-color: $primary-color;
                  opacity: 1;
                }
              }

              > .day-month {
                visibility: visible;
              }
            }

            &:not(.active) {
              > .day-badge {
                > .day-number {
                  opacity: 0.7;
                }
              }

              &:hover {
                > .day-badge {
                  > .day-number {
                    background-color: rgba($black, 0.1);
                  }
                }
              }
            }

            > .day-badge {
              font-weight: bold;
              // Needs to be px value for better calculations
              width: 60px;
              margin: 0.5rem 0;
              padding: 0.5rem 0;
              border-radius: 4px;
              display: flex;
              flex-direction: column;
              justify-content: center;
              align-items: center;
              gap: 0.3rem;

              > .day-number {
                transition: 0.1s;
                display: flex;
                justify-content: center;
                font-size: 0.9rem;
                padding: 0.2rem 0.2rem;
                margin-top: -0.2rem;
                border-radius: 3px;
              }

              > .day-name {
                font-size: 0.7rem;
                text-transform: uppercase;
                opacity: 0.6;
              }
            }
          }

          .gradient {
            pointer-events: none;
            width: 30px;
            margin-top: 10px;
            top: 0;
            bottom: 0;
            flex-shrink: 0;
            position: sticky;
            z-index: 1;

            &:first-child {
              background: linear-gradient(90deg, $bg-color 30%, transparent);
              left: 0;
            }

            &:last-child {
              background: linear-gradient(-90deg, $bg-color 30%, transparent);
              right: 0;
            }
          }
        }
      }
    }

    .nav-button {
      background: none;
      color: black;

      :global(.divider.text) {
        display: none;
      }
    }

    :global(.icons > .ui.floating.label) {
      top: -1.5em;
      right: -1em;
      left: auto;
    }

    :global(.item > .ui.floating.label) {
      top: 0;
      right: -0.2em;
      left: auto;
    }
  }
}

